Fixed some links not opening in new tabs

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                   data-rotate='[ "Developer", "Designer" ]'>
               </span>
           </h1>
-          <p>This text is considered a <strong>paragraph</strong> in HTML. Most terms in web development, or programming in general, do not mean the same thing as they do in regular speech. In HTML, <em>any</em> text in a website will generally be referred to as a paragraph. </p>
-        <p><a  href="http://www.w3schools.com/tags/tag_p.asp" class="btn btn-danger btn-lg" role="button">Learn more &raquo;</a></p>
+          <p>This text is considered a <strong>paragraph</strong> in HTML. Most terms in web development, or programming in general, do not mean the same thing as they do in regular speech. In HTML, <em>any</em> amount of text in a website will generally be referred to as a paragraph. </p>
+        <p><a  href="http://www.w3schools.com/tags/tag_p.asp" class="btn btn-danger btn-lg" role="button" target="_blank">Learn more &raquo;</a></p>
         <img src="images/code.png" title="Code.org logo" alt="Code.org">
       </div>
     </div>
@@ -87,7 +87,7 @@
             <img src="/images/cake_plain.png" alt="<the picture didn't load>" height="100px">
             <h3>HTML</h3>
             <p>HTML is akin the structure of the cake. It is how it looks before you decorate it. On a website, this would be the plain text and basic images.</p>
-            <p><a class="btn btn-default" href="http://www.w3schools.com/html/html_intro.asp" role="button">I still don't get it &raquo;</a></p>
+            <p><a class="btn btn-default" href="http://www.w3schools.com/html/html_intro.asp" target="_blank" role="button">I still don't get it &raquo;</a></p>
           </div>
           <div class="col-md-4">
             <img src="/images/cake_icing.gif" alt="<the picture didn't load>" height="100px">
