Grammar fixes/fixed smoothscroll functionality

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <span class="icon-bar"></span>
             </button>
           <!-- <a class="navbar-brand" href="#jumbotron"><img src="images/top_logo.png" alt="One Million Lines" title="One Million Lines"></a> -->
-            <h3 id="logo-header"><strong>VISUAL</strong><span>AID</span></h3>
+            <a class="navbar-brand" href="#jumbotron"><h3><strong>VISUAL</strong><span>AID</span></h3></a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -98,7 +98,7 @@
           <div class="col-md-4">
             <img src="/images/cake_candles.png" alt="<the picture didn't load>" height="100px">
             <h3>Javascript</h3>
-            <p>If HTML and CSS is the structure and design of a cake, then Javascript is the trick candles that don't blow out. Javascript is what adds functionality and interactivity to a website, and is what makes the website interesting to use.</p>
+            <p>If HTML and CSS are the structure and design of a cake respectively, then Javascript is the trick candles that don't blow out. Javascript is what adds functionality and interactivity to a website, and is what makes the website interesting to use.</p>
             <p><a class="btn btn-default" href="http://www.w3schools.com/js/" target="_blank" role="button">That made no sense &raquo;</a></p>
           </div>
         </div>
