More small text edits

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   data-rotate='[ "Developer", "Designer" ]'>
               </span>
           </h1>
-          <p>This text is considered a <strong>paragraph</strong> in HTML. Most terms in web development, or programming in general, do not mean the same thing as they do in regular speech. In HTML, <em>any</em> amount of text in a website will generally be referred to as a paragraph. </p>
+          <p>This text is considered a <strong>paragraph</strong> in HTML. Most terms in web development, and programming in general, do not mean the same thing as they do in regular speech. In HTML, <em>any</em> amount of text in a website will generally be referred to as a paragraph. </p>
         <p><a  href="http://www.w3schools.com/tags/tag_p.asp" class="btn btn-danger btn-lg" role="button" target="_blank">Learn more &raquo;</a></p>
         <img src="images/code.png" title="Code.org logo" alt="Code.org">
       </div>
@@ -74,7 +74,7 @@
         <img src="images/speech.png" alt="<the picture didn't load>" height="200px">
         <h2>WHAT THIS SPEECH IS FOR</h2>
         <hr>
-          <p>The point of this speech is to showcase a career, and to teach fellow students what the career is and how it works. For my speech, I chose to showcase being a <strong>web developer</strong>. This is why you are reading this.</p>
+          <p>The point of this speech is to showcase a career, and to teach fellow students what the career is and how it works.<br>For my speech, I chose to showcase being a <strong>web developer</strong>.</p>
       </div>
     </div>
 
