fixed typos, improved readability

--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
           <div class="col-md-4">
             <img src="/images/cake_plain.png" alt="<the picture didn't load>" height="100px">
             <h3>HTML</h3>
-            <p>HTML is akin the structure of the cake. It is how it looks before you decorate it. On a website, this would be the plain text and basic images.</p>
+            <p>HTML is akin to the structure of the cake. It is how it looks before you decorate it. On a website, this would be the plain text and basic images.</p>
             <p><a class="btn btn-default" href="http://www.w3schools.com/html/html_intro.asp" target="_blank" role="button">I still don't get it &raquo;</a></p>
           </div>
           <div class="col-md-4">
             <img src="/images/cake_icing.gif" alt="<the picture didn't load>" height="100px">
             <h3>CSS</h3>
-            <p>CSS is like the icing and pretty designs on the cake. They don't actually make it taste better, they just make it look appetizing. On a website, this would be the fancy fonts, designs, and colors. </p>
+            <p>CSS is like the icing and pretty designs on the cake. Their job is to make the cake look appetizing. On a website, this would be the fancy fonts, designs, and colors. </p>
             <p><a class="btn btn-default" href="http://www.w3schools.com/css/" target="_blank" role="button">Wait, what? &raquo;</a></p>
           </div>
           <div class="col-md-4">
             <img src="/images/cake_candles.png" alt="<the picture didn't load>" height="100px">
             <h3>Javascript</h3>
-            <p>If HTML and CSS are the structure and design of a cake respectively, then Javascript is the trick candles that don't blow out. Javascript is what adds functionality and interactivity to a website, and is what makes the website interesting to use.</p>
+            <p>If HTML and CSS are the structure and design of a cake respectively, then Javascript is the trick candle that doesn't blow out. Javascript is what adds functionality and interactivity to a website, and is what makes the website interesting to use.</p>
             <p><a class="btn btn-default" href="http://www.w3schools.com/js/" target="_blank" role="button">That made no sense &raquo;</a></p>
           </div>
         </div>
