--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="col-md-4">
             <img src="/images/cake_icing.gif" alt="<the picture didn't load>" height="100px">
             <h3>CSS</h3>
-            <p>CSS is like the icing and pretty designs on the cake. Their job is to make the cake look appetizing. On a website, this would be the fancy fonts, designs, and colors. </p>
+            <p>CSS is like the icing and pretty designs on the cake that make the cake look appetizing. On a website, this would be the fancy fonts, designs, and colors. </p>
             <p><a class="btn btn-default" href="http://www.w3schools.com/css/" target="_blank" role="button">Wait, what? &raquo;</a></p>
           </div>
           <div class="col-md-4">
